<resources>
    <string name="app_name">EbookApp</string>
    <string name="mangatitle">MangaTitle</string>
    <string name="most_popular">Popular</string>
    <string name="mangarx">MangaRx</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="more">More…</string>
    <string name="latest_manga_releases">Latest Manga Releases</string>
    <string name="trending">Trending</string>
    <string name="to_the_world_of_manga">To the world of Manga</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="required_field">Required Field</string>
    <string name="your_email">Your Email</string>
    <string name="email_address">Email Address</string>
    <string name="loginillustration">LoginIllustration</string>
    <string name="signupillusttation">SignUpIllusttation</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="or">Or</string>
    <string name="facebook_app_id">2771610166406055</string>
    <string name="fb_login_protocol_scheme">fb2771610166406055</string>
</resources>