<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_trending"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_sc"
            android:padding="10dp"
            android:text="@string/trending"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:id="@+id/tv_moreTrending"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rv_trending"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/amarante"
            android:padding="10dp"
            android:text="@string/more" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_trending" />

        <TextView
            android:id="@+id/tv_latestMangaReleases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_trending"
            android:fontFamily="@font/alegreya_sans_sc"
            android:padding="10dp"
            android:textColor="#fff"
            android:text="@string/latest_manga_releases"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_latestMangaReleases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_latestMangaReleases" />

        <TextView
            android:id="@+id/tv_moreMangaReleases"
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rv_latestMangaReleases"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/amarante"
            android:padding="10dp"
            android:text="@string/more" />
        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_latestMangaReleases"
            android:fontFamily="@font/alegreya_sans_sc"
            android:padding="10dp"
            android:textColor="#fff"
            android:text="@string/most_popular"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_popular"
            android:layout_below="@id/tv_popular"/>
        <TextView
            android:id="@+id/tv_morePopular"
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rv_popular"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/amarante"
            android:padding="10dp"
            android:text="@string/more" />
    </RelativeLayout>
</ScrollView>
