<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLoginPage"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:contentDescription="@string/loginillustration"
            android:id="@+id/loginIllustration"
            android:layout_height="240dp"
            android:layout_width="match_parent"
            android:src="@drawable/ic_undraw_unlock_24mb" />

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/loginLayout"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            app:cardCornerRadius="16dp"
            app:cardElevation="15dp"
            app:cardMaxElevation="30dp"
            app:contentPadding="24dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/your_email"
                        android:id="@+id/et_yourName"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/password"
                        android:id="@+id/loginPassword"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:id="@+id/btn_login"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:text="@string/login"
                        app:cornerRadius="16dp"
                        app:elevation="16dp"
                        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:iconGravity="end"
                        app:strokeColor="@color/DarkBrown"
                        app:strokeWidth="1dp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:id="@+id/btn_signUp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:text="@string/signup"
                        app:cornerRadius="16dp"
                        app:elevation="16dp"
                        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:iconGravity="end"
                        app:strokeColor="@color/DarkBrown"
                        app:strokeWidth="1dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:fontFamily="@font/montserrat_alternates"
            android:id="@+id/orText"
            android:layout_below="@id/loginLayout"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/or"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <com.facebook.login.widget.LoginButton
            style="@style/com_facebook_loginview_default_style"
            android:gravity="center"
            android:id="@+id/facebookLoginButton"
            android:layout_below="@id/orText"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


