<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <ProgressBar
            android:id="@+id/signUpProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/subtitleForMainTitle"
            android:fontFamily="cursive"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/subtitleForMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/loginLayout"
            android:fontFamily="@font/amita"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:text="@string/to_the_world_of_manga"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/White" />

        <androidx.cardview.widget.CardView
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_howCanICallYou"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:hint="Email Address"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUpToLogin"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="center"
                    android:text="@string/signup"
                    app:cornerRadius="16dp"
                    app:elevation="16dp"
                    app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                    app:iconGravity="end" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
